[package]
name = "ncgopher"
version = "0.8.0"
authors = ["Jan Schreiber <jan@mecinus.com>"]
edition = "2018"
license = "BSD-2-Clause"
description = "An ncurses gopher and gemini client for the modern internet"
documentation = "https://github.com/jansc/ncgopher/blob/master/README.org"
readme = "README.md"
homepage = "https://github.com/jansc/ncgopher"
repository = "https://github.com/jansc/ncgopher"
keywords = ["cli", "gopher", "gemini", "client"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["screenshots/**"]

[badges.travis-ci]
repository = "jansc/ncgopher"

[dependencies]
backtrace = "0.3"
unicode-width = "0.2.2"
url = { version = "2.5", features = ["serde"] }
urlencoding = "2.1.3"
lazy_static = "1.5.0"
clap = { version = "4.5.54", features = ["derive"] }
log = { version = "0.4.29", features = ["std"] }
dirs = "6.0.0"
rcgen = "0.14"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.10"
rusqlite = { version = "0.38.0", features = ["url", "time"] }
gemtext = "0.2.1"
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std"] }
x509-parser = "0.18.0"
ring = "0.17.14"
time = { version = "0.3.44", features = ["serde", "serde-human-readable", "std", "formatting", "parsing"] }
pancurses = "0.17.0"
base64 = "0.22"
percent-encoding = "2.3"
idna = "1.1"
cursive = { version = "0.21.1", default-features = false, features = ["pancurses-backend", "toml"] }
crossbeam-channel = "0.5.15"
regex = "1"
mime = "0.3.17"
linkify = "0.10.0"
stringreader = "0.1.1"
rustls-pemfile = "2.2.0"
